@@ -95,8 +95,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2014-2021 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2014-2021 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.07
